# winding-number

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  charter.md  logo-prompt.md
examples/: demo.py
src/winding_number/: __init__.py  _core.py  _even_odd.py  _geometry.py
tests/: test_even_odd.py  test_geometry.py  test_winding_number.py
